[gd_scene load_steps=3 format=3 uid="uid://dnjejbl8ptjxm"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_gkf48"]

[sub_resource type="Theme" id="Theme_urxob"]

[node name="PauseMenu" type="PanelContainer"]
custom_minimum_size = Vector2(500, 450)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gkf48")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_urxob")
max_value = 1.0
step = 0.05
value = 1.0

[node name="EffectsLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 64
text = "Quit Game"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/GridContainer/EffectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
